crates/keron-lang/tests/corpus/errors/check/reconcile_list_int.keron
reconcile [1, 2, 3]
